[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Util/UI/Modules/Loading/loading_screen.gd" id="1"]

[node name="LoadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StatusLabel" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
text = "加载中..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
value = 50.0
show_percentage = false

[node name="Spacer" type="Control" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="TipLabel" type="Label" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "提示：使用技能组合可以造成更高伤害"
horizontal_alignment = 1
autowrap_mode = 2
